# AinLanguage

./: CMakeLists.txt  ExpressionPrettyPrintTest.cpp  README.md
AinApp/: ainio.ain  ainmem.ain  app.ain
ainstd/: ainio.ain  ainmem.ain  chars_iterator.ain
ainstd/math/: frexp.ain  frexp10.ain
ainstd/util/: float_to_str.ain  int_to_str.ain  uint_to_str.ain
editor-support/: ain.lang
include/: BuiltInFilePaths.hpp
include/compiler/: Assembler.hpp  Compiler.hpp  CompilerVarsOffsetSetter.hpp
include/exceptions/lexer/: IllegalCommaException.hpp
include/expression/: OperatorFunInvokeExpression.hpp  SetOperatorExpression.hpp  VoidExpression.hpp
include/expression/value/: ByteValue.hpp  DoubleValue.hpp  ShortValue.hpp  UByteValue.hpp  UShortValue.hpp  VoidValue.hpp
include/helpers/: string_helper.hpp  wchar_t_helper.hpp
include/interpreter/: Interpreter.hpp
include/lexer/: KeywordToken.hpp  NumberToken.hpp
include/parser/AST/: ASTVisitor.hpp
include/parser/elements/: Type.hpp
include/scope/: ClassScope.hpp  FunScope.hpp  Variable.hpp
include/scope/class/: ByteClassScope.hpp  ShortClassScope.hpp  StringClassScope.hpp  UByteClassScope.hpp  UShortClassScope.hpp  VoidClassScope.hpp
include/scope/function/: BuiltInFunScope.hpp  OperatorFunctions.hpp
include/semantics/: SemanticsChecksVisitor.hpp
include/statement/: AugmentedAssignStatement.hpp
native/: ainio.ain  ainmem.ain  chars_iterator.ain
src/: main.cpp
src/compiler/: Assembler.cpp  Compiler.cpp  CompilerVarsOffsetSetter.cpp
src/expression/: OperatorFunInvokeExpression.cpp  SetOperatorExpression.cpp  VoidExpression.cpp
src/expression/value/: ByteValue.cpp  DoubleValue.cpp  ShortValue.cpp  UByteValue.cpp  UShortValue.cpp  VoidValue.cpp
src/helpers/: string_helper.cpp  wchar_t_helper.cpp
src/interpreter/: Interpreter.cpp
src/lexer/: KeywordToken.cpp  LexerLine.cpp  LexerToken.cpp
src/parser/: ASTVisitor.cpp  ExpressionParser.cpp  FunParser.cpp  StmListParser.cpp
src/parser/elements/: Type.cpp
src/parser/elements/parser/: VarDeclParser.cpp
src/scope/: ArrayClassScope.cpp  ClassScope.cpp  FunScope.cpp  StringClassScope.cpp  Variable.cpp
src/scope/function/: BuiltInFunScope.cpp
src/semantics/: SemanticsChecksVisitor.cpp
src/statement/: AugmentedAssignStatement.cpp  ReturnStatement.cpp
test/ain_file/: AinFileTest.cpp
test/lexer/: LexerLineTest.cpp  LexerTest.cpp
test/parser/: FileParserTest.cpp  FunParserTest.cpp  PackageParserTest.cpp  TokensIteratorTest.cpp
test/parser/elements/: FunDeclTest.cpp  FunParamTest.cpp  TypeTest.cpp
test/parser/elements/parser/: FunDeclParserTest.cpp  FunParamParserTest.cpp  TypeParserTest.cpp  VarDeclParserTest.cpp
testInclude/: StringMaker.hpp
